Refactor CORS handling into injectable components
Extract origin configuration lookup, response decoration, and preflight validation from CorsFilter into dedicated components.

Add a configuration option to disable the CORS filter entirely, preserve deprecated extension points for compatibility, and expand coverage for CORS utilities, preflight validation, and filter configuration.